# agent-foundry

./: .env.example  .gitignore  AGENT_COMPANY.md  NORTH_STAR.md  README.md  foundry.yaml.example  pyproject.toml
.codex/agents/: architect.toml  builder.toml  researcher.toml  risk.toml  trader.toml  writer.toml
agents/architect/: memory.md  scorecard.yaml  system.md
agents/builder/: memory.md  scorecard.yaml  system.md
agents/critic/: memory.md  scorecard.yaml  system.md
agents/orchestra/: memory.md  scorecard.yaml  system.md
agents/researcher/: memory.md  scorecard.yaml  system.md
agents/risk/: memory.md  scorecard.yaml  system.md
agents/tax_accounting/: memory.md  scorecard.yaml  system.md
agents/tester/: memory.md  scorecard.yaml  system.md
agents/trader/: memory.md  scorecard.yaml  system.md
agents/writer/: memory.md  scorecard.yaml  system.md
foundry/: __init__.py  cli.py  config.py
foundry/agents/: __init__.py  architect.py  builder.py  critic.py  orchestra.py  researcher.py  risk.py  tax_accounting.py  tester.py  trader.py  writer.py
foundry/graph/: __init__.py  router.py  runner.py  state.py
foundry/schemas/: __init__.py  agents.py  projects.py  reports.py  (+5 more)
policies/: permissions.yaml  repo_access.yaml  safety.yaml
projects/: ai-trader.yaml  example-python.yaml
prompts/: bootstrap_agent_foundry.md  task_runner.md
tests/: test_cli.py  test_codex_runner.py  test_loaders.py  test_promotion.py  test_real_codex_runner.py  test_report_and_receipt.py  test_router.py  test_safety_checker.py  test_schemas.py  test_workspace_manager.py
(+26 files in other folders)
